@@ -1,3 +1,5 @@
+2189.	[bug]		Handle socket() returning EINTR. [RT #15949]
+
 2188.	[contrib]	queryperf: autoconf changes to make the search for
 			libresolv or libbind more robust. [RT #16299]
 
